[Feat] Improved UX for tabbing from one input to the other, improved the visual experience by putting elements farther from each other

--- a/main.css
+++ b/main.css
@@ -16,11 +16,15 @@ body {
 	color: #fff;
 }
 
+th, td {
+	padding: .125rem .25rem;
+}
+
 input, select, textarea, button {
 	font: inherit;
 	color: inherit;
 
-	background: #122;
+	background: #021;
 	border: 1px solid;
 }
 
